# AoC-bot

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yaml  docker.yaml
src/: main.rs
